--- a/.github/workflows/flake-update.yaml
+++ b/.github/workflows/flake-update.yaml
@@ -34,6 +34,7 @@ jobs:
 
   cache:
     runs-on: ubuntu-latest
+    needs: [bump_lock]
     steps:
     - uses: actions/checkout@v3
       name: Clone repository
@@ -61,6 +62,7 @@ jobs:
 
   check:
     runs-on: ubuntu-latest
+    needs: [bump_lock, cache]
     steps:
     - uses: actions/checkout@v3
       name: Clone repository
